# bdd_test

./: .clang-format  .coveralls.yml  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  CODEOWNERS  CONTRIBUTING.md  Doxyfile  LICENSE  README.md  README_DOT_TEMPLATE.md  annotated.html  bdd__demo__python_8py_source.html  bdd_graph.cpp  bdd_graph.hpp  classbdd__demo__python_1_1_expression_lexer-members.html  classbdd__demo__python_1_1_expression_lexer.html  classbdd__demo__python_1_1_expression_parser-members.html  classbdd__demo__python_1_1_expression_parser.html  classbdd__demo__python_1_1_expression_token-members.html  classbdd__demo__python_1_1_expression_token.html  classbdd__demo__python_1_1_python_b_d_d_demo-members.html  classbdd__demo__python_1_1_python_b_d_d_demo.html  classcudd__iterator-members.html  classcudd__iterator.html  classes.html  classexpression__adapter-members.html  classexpression__adapter.html  classexpression__iterator-members.html  classexpression__iterator.html  classgraph__common_1_1node__id__allocator-members.html  classgraph__common_1_1node__id__allocator.html  classteddy__iterator-members.html  classteddy__iterator.html  concept_base_graph_iterator.html  concept_children_range.html  conceptdag__walker_1_1_dag_walker_iterator.html  conceptdag__walker_1_1_visitor.html  conceptdag__walker_1_1has__should__process.html  conceptdot__graph_1_1_dot_graph_iterator.html  (+277 more)
.github/: copilot-instructions.md  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  coverage.yml  dependency-check.yml  documentation.yml
cmake/: FetchAndPatch.cmake  example_usage.cmake  python_bdd_integration.cmake  run_bdd_test.cmake  run_cmdline_test.cmake  test_functions.cmake
docs/: ADVANCED.md  BUILDING.md  CONTRIBUTING.md  COVERAGE.md  CUDD_CANONICAL_OUTPUT_FIX.md  DOCUMENTATION.md  LESSONS_LEARNED.md  N_QUEENS_STRESS_TESTING.md  README.md  TEDDY.md  TROUBLESHOOTING.md  UNIT_TESTING.md  VISUALIZATIONS.md
documentation/: dependency-management.md
include/: bdd_graph.hpp  cudd_convert.hpp  cudd_graph.hpp  cudd_iterator.hpp  cudd_view.hpp  dag_walker.hpp  dot_graph_generator.hpp  expression_adapter.hpp  expression_graph.hpp  expression_iterator.hpp  expression_parser.hpp  expression_types.hpp  expression_view.hpp  graph.hpp  graph_concepts.hpp  graph_iterator_concepts.hpp  graph_render_helpers.hpp  mermaid_graph_generator.hpp  node_id_allocator.hpp  node_id_helpers.hpp  node_table_generator.hpp  teddy_convert.hpp  teddy_graph.hpp  teddy_iterator.hpp  teddy_view.hpp
patches/: 0001-Fix-memory-leak-in-unique_table-rehash-function.patch  README.md
python_bdd/: IMPLEMENTATION_SUMMARY.md  README.md  bdd_demo_python.py  requirements.txt  setup_python_bdd.py
scripts/: check-format.ps1  generate_all_visualizations.ps1  generate_coverage.ps1  generate_docs.ps1  generate_docs.sh  install-hooks.ps1  pre-commit  run-sanitizers.ps1  run-sanitizers.sh  setup-dev-env.ps1  update-reference-files.ps1
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_1a.js  all_1b.js  all_1c.js  all_1d.js  all_1e.js  all_1f.js  all_2.js  all_20.js  all_21.js  all_22.js  all_23.js  all_24.js  all_25.js  all_26.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  (+72 more)
src/: bdd_graph.cpp  cudd_graph.cpp  expression_graph.cpp  expression_parser.cpp  main.cpp  teddy_graph.cpp
test_expressions/: all_operators.txt  boundary_test_bdd_nodes.txt  deeply_nested.txt  eight_queens.txt  error_test2.txt  filter_expression.txt  filter_expression_analysis.md  filter_expression_bdd.md  filter_expression_expression_tree.md  many_variables.txt  multiple_not.txt  my test expression.txt  my test expression_bdd_nodes.txt  my_test_expression.txt  same_variable.txt  simple_expression.txt  simple_expression_analysis.md  simple_expression_bdd.dot  simple_expression_bdd.md  simple_expression_bdd_nodes.txt  simple_expression_expression_tree.dot  simple_expression_expression_tree.md  single_variable.txt  test_subdir_expression.txt  test_subdir_expression_bdd_nodes.txt  underscore_vars.txt  xor_chain.txt
test_expressions/cudd_expected_output/: all_operators_bdd.dot  all_operators_bdd_nodes.txt  deeply_nested_bdd.dot  deeply_nested_bdd_nodes.txt  deeply_nested_expression_tree.dot  eight_queens_bdd_nodes.txt  eight_queens_expression_tree.dot  filter_expression_bdd.dot  filter_expression_bdd_nodes.txt  four_queens_bdd.dot  four_queens_bdd_nodes.txt  many_variables_bdd.dot  many_variables_bdd_nodes.txt  multiple_not_bdd.dot  multiple_not_bdd_nodes.txt  my_test_expression_bdd.dot  my_test_expression_bdd_nodes.txt  same_variable_expression_tree.dot  simple_expression_expression_tree.dot  single_variable_expression_tree.dot  six_queens_bdd.dot  six_queens_bdd_nodes.txt  six_queens_expression_tree.dot  test_subdir_expression_expression_tree.dot  underscore_vars_expression_tree.dot  xor_chain_bdd.dot  xor_chain_bdd_nodes.txt  xor_chain_expression_tree.dot
test_expressions/cudd_reference_outputs/: all_operators_analysis.md  index.md  (+12 more)
tests/: CMakeLists.txt  README.md  verify_cudd_determinism.sh
tests/unit/: teddy_test_utils.hpp  test_bdd_iterators.cpp  test_cudd_convert.cpp  test_cudd_graph.cpp  test_cudd_iterator.cpp  test_cudd_view.cpp  test_dag_walker.cpp  test_dot_graph_bdd_format.cpp  test_dot_graph_fallback_iterator.cpp  test_dot_graph_generator.cpp  test_dot_schema_validator.cpp  test_example.cpp  test_expression_adapter.cpp  test_expression_graph.cpp  test_expression_iterator.cpp  test_expression_parser.cpp  test_expression_view.cpp  test_graph.cpp  test_graph_render_helpers.cpp  test_main.cpp  test_mermaid_graph_generator.cpp  test_mermaid_schema_validator.cpp  test_node_id_allocator.cpp  test_node_id_helpers.cpp  test_node_table_edge_cases.cpp  test_node_table_generator.cpp  test_teddy_convert.cpp  test_teddy_graph.cpp  test_teddy_iterator.cpp  test_teddy_view.cpp
(+203 files in other folders)
